--- a/LeftRightTwix/left.html
+++ b/LeftRightTwix/left.html
@@ -17,7 +17,7 @@
 <a href="right.html">Right Twix</a> &nbsp; 
 </nav>
 <main>
-<img src="Lefttwiximage.jpg" alt="A Left Twix Bar" width="225" height="300" align="left">
+<img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/LeftRightTwix/Lefttwiximage.JPG" alt="A Left Twix Bar" width="225" height="300" align="left">
 <p>So you're a Left Twix kind of person, huh? Good choice! Left Twix is the superior Twix out of the two. Why? Well let me tell you why! <br> Left Twix has benefits to it, such as: </p>
 <ul>
   <li>It has a whopping 3 layers of different flavors in just one bar</li>
