--- a/right.html
+++ b/right.html
@@ -17,7 +17,7 @@
 <a href="right.html">Right Twix</a> &nbsp; 
 </nav>
 <main>
-<img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/LeftRightTwix/Righttwiximage.JPG" alt="A Left Twix Bar" width="225" height="300" align="right">
+<img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/LeftRightTwix/Righttwiximage.JPG" alt="A Right Twix Bar" width="225" height="300" align="right">
 <p>So you're a Right Twix kind of person, huh? Good choice! Right Twix is the superior Twix out of the two. Why? Well let me tell you why! <br> Right Twix has benefits to it, such as: </p>
 <ul>
   <li>It has a whopping 3 layers of different flavors in just one bar</li>
