--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <p><hr> A bit of backstory as well from wikipedia: <br><br> The product was first produced in the United Kingdom in 1967, and introduced in the United States in 1979. Twix was called Raider in mainland Europe for many years before its name was changed in 1991</p>
 <p><hr> Now having the proper information about Twix, what side do you think you're on? Or what side do you <b>know</b> that you're on? Decide now by clicking on either <b>Left Twix</b> or <b>Right Twix</b> at the top under <b>Home</b> to bring you to the page that you'd relate towards more. </p>
 <center>
-  <img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/LeftRightTwix/BothTwix.JPG" alt="Both Twix" width="425px" height="300px">
-  <img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/BothTwix.JPG" alt="Both Twix" width="425px" height="300px">
+  <img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/LeftRightTwix/BothTwix.jpg" alt="Both Twix" width="425px" height="300px">
+  <img src="https://raw.githubusercontent.com/ItsyaTroy/TwixChoice/main/BothTwix.jpg" alt="Both Twix" width="425px" height="300px">
 
 </center>
 </main>
